# pyaudioserver

./: README.md  pyproject.toml  requirements.txt
src/audioserver/: __main__.py  _main.py
src/audioserver/_app/: player.py  publish_chunk_mqtt.py  record_chunks_sounddevice.py
src/audioserver/_domain/: play_bytes.py  publish_chunk.py  record_chunks.py
