[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "audioserver"
version = "0.0.1"
description = "An MQTT audio server"
requires-python = ">=3.7"
dependencies =
    black==22.3.0
    click==8.1.3
    coloredlogs==15.0.1
    humanfriendly==10.0
    mypy-extensions==0.4.3
    paho-mqtt==1.6.1
    pathspec==0.9.0
    platformdirs==2.5.2
    playsound==1.3.0
    tomli==2.0.1
    typing_extensions==4.2.0